fix(ui): replace deprecated Vaadin MemoryBuffer with UploadHandler.inMemory()
Migrate Upload receiver from deprecated MemoryBuffer/getReceiver() API
to UploadHandler.inMemory(), and replace deprecated Locale(String)
constructors with Locale.of() to eliminate all deprecation-for-removal
warnings in the test-compile phase.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01LHSJNcBTJgypGdP9Dw3caR